--- a/index.html
+++ b/index.html
@@ -5,37 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calendar 2</title>
-  <style>
-    .calendar {
-      display: grid;
-      grid-template-columns: repeat(7, 100px);
-      grid-template-rows: 50px repeat(5, 100px);
-      justify-items: end;
-      margin: 1rem;
-    }
+  <link href="style.css" rel="stylesheet">
+  </link>
 
-    .box {
-      align-items: center;
-      color: brown;
-    }
-
-    .day {
-      display: grid;
-      justify-items: end;
-    }
-
-    .title {
-      color: lightslategray;
-      text-align: start;
-    }
-  </style>
 
 </head>
 
 <body>
   <div class="addButton">+</div>
-  </div>
-
   <div>
     <div class="overlay">
       <input></input>
@@ -65,120 +42,9 @@
         <day v-for="day in daysInMonth" :day="day" :month="selected.month" :year="selected.year"></day>
       </div>
     </div>
-
-    <script src="http://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
-    <script>
-      Vue.component('day', {
-        props: ['day', 'month', 'year', 'add', 'event'],
-        computed: {
-          events: function () {
-            return this.$root.events.filter(event => {
-              return event.day === this.day &&
-                event.month === this.month &&
-                event.year === this.year
-            })
-          }
-        },
-        template: `
-      <div class ="box">
-        <div @click="add">{{ day }}</div>
-      
- <div v-if="event">
- <div class="put">
- <button
-            @click="resets">Update</button>
- <input v-model="title" />
- <input v-model="time"
-            @keyup.enter="addEvent" />
- <button @click="addEvent">add</button>
- <div v-for="event in eventList">
-
-            {{ event.title }} {{ event.time }}
- <button @click="deleteEvent(index)">delete</button>
- </div>
- </div>
-
-      </div>
-      </div>
-`,
-        data() {
-          return {
-            event: false,
-            eventList: [],
-            time: "Time:",
-            title: "Title:",
-          }
-        },
-        methods: {
-          add() {
-            this.event = true
-          },
-          resets() {
-            this.event = false
-          },
-          addEvent() {
-            this.eventList.push({
-              time: this.time,
-              title: this.title,
-            })
-            // this.reset()
-          },
-          reset() {
-            this.time = ""
-            this.title = ""
-          },
-          deleteEvent(index) {
-            this.eventList.splice(index, 1)
-
-          }
-        }
-
-      })
-
-      const app = new Vue({
-        el: '#app',
-        data: {
-          months: ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'Algust', 'September',
-            'Octuber',
-            'November', 'December'
-          ],
-          years: [2020, 2021, 2022, 2023, 2024, 2025],
-          selected: {
-            month: 0, //January
-            year: 2020
-          }
-        },
-
-        //create an event array of object
-        //each event will be an object in the event array 
-
-        //events: [{
-        //text: 'Staff Metting',
-        //day: 9,
-        // month: 0,
-        //year: 2020,
-        //time: '1:30 PM',
-        //details: 'Room T308'
-        // }, ]
-
-
-
-        computed: {
-
-          daysInMonth: function () {
-            const date = new Date(this.selected.year, this.selected.month + 1, 0)
-              .getDate() // last day of selected month
-            return date
-          },
-          startDay: function () {
-            const date = new Date(this.selected.year, this.selected.month, 1).getDay()
-            return date
-          }
-        }
-      })
-    </script>
-
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
